# MPC_Studio_Sampler

./: .gitignore  CMakeLists.txt  README.md  TODO.md  schema.yaml  vcpkg.json
src/: display.h  main.cpp  util.h
src/control_surface/: CMakeLists.txt  button_control.h  const.h  control.cpp  control.h  encoder_control.cpp  encoder_control.h  mpc_studio_black.cpp  mpc_studio_black_surface.h
src/control_surface/components/: component.h  transport_component.h
src/control_surface/controls/: button_control.cpp  button_control.h  control.cpp  control.h  controls.h  encoder_control.cpp  encoder_control.h  pad_control.h
src/control_surface/devices/: controls.h  mpc_studio_black.cpp  mpc_studio_black.h  mpc_studio_surface_def.h
src/core/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  meter_node.cpp  meter_node.h  metronome.h  midi_clip.cpp  midi_clip.h  mpc_sampler.h  parameter.h  playhead.h  project.h  timing.h  track.h
src/core/devices/: device_base.h  sampler_device.h  synth_device.h
src/device/: button_control.cpp  control.cpp  control.h  encoder_control.cpp  mpc_studio_black.cpp  mpc_studio_black.h
src/ui/: CMakeLists.txt  Display.h  TextWidget.h  Widget.cpp  Widget.h  Widgets.h
src/ui/widgets/: knob_widget.h  parameter_widget.h  text_widget.h  ui_helpers.h  widget.cpp  widget.h  widgets.h
